--- a/src/app/layout/productos/productos-add/product-add.component.html
+++ b/src/app/layout/productos/productos-add/product-add.component.html
@@ -1,30 +1,43 @@
-<div>
-    <h2>Product Add</h2>
+<!-- Modal de Agregar Producto -->
+<div class="modal fade"  id="modalAgregarProducto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+            <h3 class="modal-title" id="myModalLabel">Agregar Producto</h3>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true" #closeBtnAgregarCertificado>&times;</button>
+        </div>
+        <form class="col-md-12" #f="ngForm">
+          <div class="modal-body">            
+            <div class="form-group">
+              <h5 for="product-name">Nombre</h5>
+              <input class="form-control" name="product-name" [(ngModel)]="product.name" placeholder="Nombre de Producto"/>
+            </div>
 
-    <!-- Example of use
-    <div>
-      <label>ID: </label>
-      <input type="text" [(ngModel)]='Product.id' placeholder="1">
-    </div> -->
+            <div class="form-group">
+              <h5 for="product-icon">Icono</h5>
+              <input class="form-control" name="product-icon" [(ngModel)]="product.icon" placeholder="Icono"/>
+            </div>
+          </div>
 
-    <button (click)='create()'>Save</button>
-  </div>
+          <div class="modal-footer">
+            <button pButton
+              label="Aceptar"
+              icon="fa fa-plus"
+              class="ui-button-primario" 
+              *ngIf="!product._id"
+              data-dismiss="modal"
+              (click)="create(f)"
+            ></button>
 
-<div *ngIf="product" class="row">
-  <div class="col-md-12">
-    <h2 *ngIf="product._id">Contact Details</h2>
-    <h2 *ngIf="!product._id">New Contact</h2>
-  </div>
-</div>
-
-<div *ngIf="product" class="row">
-  <form class="col-md-12">
-    <div class="form-group">
-      <label for="product-name">Name</label>
-      <input class="form-control" name="product-name" [(ngModel)]="product.name" placeholder="Name"/>
+            <button
+              pButton
+              class="ui-button-danger"
+              label="Cancelar"
+              icon="fa fa-times"
+              data-dismiss="modal"
+            ></button>
+          </div>
+        </form>
+      </div>
     </div>
-
-    <button class="btn btn-primary" *ngIf="!contact._id" (click)="create()">Create</button>
-
-  </form>
-</div>
+  </div>
